# mall-geo-targeting

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: accessibility_weights.yaml  analysis.yaml  commercial.yaml  commercial_weights.yaml  data_sources.yaml  feature_weights.yaml  licenses.yaml  malls.yaml  osm.yaml  scenarios.yaml
data/: sample_population.csv
data/raw/: README.md
data/raw/commercial/: README.md  sample_commercial_poi.geojson  sample_commercial_poi.metadata.yaml
data/raw/commercial/processed/: aeon-mall-musashimurayama__commercial-poi__20260720.metadata.yaml
data/raw/estat/: README.md  sample_estat_population.csv  sample_estat_population.metadata.yaml
data/raw/malls/: README.md  aeon-mall-musashimurayama__mall-profile__20260718.metadata.yaml  aeon-mall-musashimurayama__mall-profile__20260718.yaml  competitor_candidates.yaml  sample_malls.metadata.yaml
data/raw/osm/: README.md  sample_osm.geojson  sample_osm.metadata.yaml
outputs/: delivery_zones.geojson  map.html  mesh_scores.csv
public/: index.html
scripts/: prepare_vercel.py
src/mall_geo_targeting/: __init__.py  analysis.py  cli.py  commercial.py  commercial_processing.py  config.py  estat.py  estat_processing.py  map_output.py  models.py  osm.py  osm_processing.py  output.py  pipeline.py  validation.py
tests/: test_analysis.py  test_commercial.py  test_commercial_processing.py  test_estat.py  test_estat_processing.py  test_feature_weights.py  test_map_output.py  test_osm.py  test_pipeline.py  test_publication.py  test_validation.py
(+3 files in other folders)
