[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mall-geo-targeting"
version = "0.1.0"
description = "Mall app acquisition-potential geotargeting MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
mall-geo-targeting = "mall_geo_targeting.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mall_geo_targeting"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

